added a listener on the main window to trigger setMenu function when the window is loaded

--- a/Client/editFile.html
+++ b/Client/editFile.html
@@ -8,5 +8,10 @@
 <body>
     <textarea id="text-box"></textarea>
     <script src="./renderer.js"></script>
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            window.api.setMenu();
+          });
+          </script>
 </body>
 </html>
