--- a/Client/fileDialog.html
+++ b/Client/fileDialog.html
@@ -18,26 +18,7 @@
   <input type="text" id="textInput" name="textInput">
   <button class="button" id="okButton">OK</button>
   <button class="button" id="cancelButton">Cancel</button>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-    console.log("on callback");
-    const okButton = document.getElementById('okButton');
-    const cancelButton = document.getElementById('cancelButton');
-    const inputField = document.getElementById('textInput');
-
-    okButton.addEventListener('click', () => {
-      console.log("ok button clicked");
-      const input = inputField.value;
-      window.electronAPI.createNewFile(input);
-      window.close();
-    });
-
-    cancelButton.addEventListener('click', () => {
-      console.log("cancel button clicked");
-      window.close();
-    });
-  });
-  </script>
+  <script src="./fileDialogRenderer.js"></script>
   
 </body>
 </html>
