changed the name of the javascript code connected to the  to the new name of the renderer

--- a/Client/editFile.html
+++ b/Client/editFile.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <textarea id="text-box"></textarea>
-    <script src="./renderer.js"></script>
+    <script src="./editFileRenderer.js"></script>
 </body>
 </html>
