Switched from connecting the button with onclick to adding an id

--- a/Client/login/login.html
+++ b/Client/login/login.html
@@ -22,7 +22,7 @@
         <input type="password" id="password" name="password" required>
       </div>
       <div id="errorMessage" class="error-message"><em></em></div>
-      <button type="button" class="action-btn" onclick="login()">Login</button>
+      <button type="button" class="action-btn" id="loginButton">Login</button>
     </form>
     <p class="switch-form" onclick="switchForm()">Don't have an account? Sign Up</p>
   </div>
