--- a/Client/signup/signup.html
+++ b/Client/signup/signup.html
@@ -28,7 +28,7 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div id="errorMessage" class="error-message"><em></em></div>
-      <button type="button" class="action-btn" onclick="signup()">Sign Up</button>
+      <button type="button" class="action-btn" id="signupButton">Sign Up</button>
     </form>
     <p class="switch-form" onclick="switchForm()">Already have an account? Login</p>
   </div>
