Changed the name of the renderer connected to the html to be the new name of the dialog's name

--- a/Client/creationDialog/creationDialog.html
+++ b/Client/creationDialog/creationDialog.html
@@ -36,6 +36,6 @@
     </form>
   </div>
 
-  <script src="./fileDialogRenderer.js"></script>
+  <script src="./creationDialogRenderer.js"></script>
 </body>
 </html>
