Added the style to the context menu

--- a/Client/fileViewing/fileViewing.html
+++ b/Client/fileViewing/fileViewing.html
@@ -12,9 +12,8 @@
   </div>
   <!-- Context Menu -->
   <div class="context-menu">
-    <div
-        class="bg-white w-60 border border-gray-300 rounded-lg flex flex-col text-sm py-4 px-2 text-gray-500 shadow-lg">
-        <div class="flex hover:bg-gray-100 py-1 px-2 rounded cursor-pointer" id="shareButtonDiv">
+    <div class="bg-white w-60 border border-gray-300 rounded-lg flex flex-col text-sm py-4 px-2 text-gray-500 shadow-lg" style="background-color: #b4ffd6; color: #023939;">
+        <div class="flex hover:bg-gray-100 py-1 px-2 rounded cursor-pointer" id="shareButtonDiv" style="background-color: #b4ffd6; color: #023939;">
             <div class="w-5 text-gray-900">
                 <svg aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
