Fix the bug where the names of the files disappear after the user clicks on the `OK` button

--- a/Client/compilingDialog/compilingDialog.html
+++ b/Client/compilingDialog/compilingDialog.html
@@ -16,6 +16,7 @@
       </div>
         <h4>Please choose the files you want to compile together:</h4>        
         <div class="compile-container" id="compilingForm"></div>
+      <div id="errorMessage" class="error-message"><em></em></div>
         <div class="buttons-group">
             <button class="action-btn" id="okButton">OK</button>
             <button class="action-btn" id="cancelButton">Cancel</button>
