Added the manage option to the context menu

--- a/Client/fileViewing/fileViewing.html
+++ b/Client/fileViewing/fileViewing.html
@@ -14,6 +14,7 @@
   <div id="contextMenu" class="context-menu">
     <ul>
       <li id="shareOption"><img src="../images/share-icon.png" alt="Share Icon" class="context-menu-icon"> Share</li>
+      <li id="manageOption"><img src="../images/manage-icon.png" alt="Manage Icon" class="context-menu-icon"> Manage</li>
     </ul>
   </div>
 <!-- Context Menu -->
