Added the delete option to the context menu of the files and folders

--- a/Client/fileViewing/fileViewing.html
+++ b/Client/fileViewing/fileViewing.html
@@ -11,20 +11,12 @@
   <div class="files-container" id="fileViewingForm">
   </div>
   <!-- Context Menu -->
-  <div class="context-menu">
-    <div class="bg-white w-60 border border-gray-300 rounded-lg flex flex-col text-sm py-4 px-2 text-gray-500 shadow-lg" style="background-color: #b4ffd6; color: #023939;">
-        <div class="flex hover:bg-gray-100 py-1 px-2 rounded cursor-pointer" id="shareButtonDiv" style="background-color: #b4ffd6; color: #023939;">
-            <div class="w-5 text-gray-900">
-                <svg aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.933-2.185 2.25 2.25 0 00-3.933 2.185z"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </svg>
-            </div>
-            <div class="ml-3">Share</div>
-        </div>
-    </div>
+  <div id="contextMenu" class="context-menu">
+    <ul>
+      <li id="shareOption"><img src="../images/share-icon.png" alt="Share Icon" class="context-menu-icon"> Share</li>
+      <li id="manageOption"><img src="../images/manage-icon.png" alt="Manage Icon" class="context-menu-icon"> Manage</li>
+      <li id="deleteOption"><img src="../images/delete-icon.png" alt="Delete Icon" class="context-menu-icon"> Delete</li>
+    </ul>
   </div>
 <!-- Context Menu -->
   <script src="./fileViewingRenderer.js"></script>
