--- a/Client/editFile/editFile.html
+++ b/Client/editFile/editFile.html
@@ -7,7 +7,10 @@
     <title>CodeHarbor</title>
 </head>
 <body>
+    <!-- Textarea for user input -->
     <textarea id="text-box"></textarea>
+
+    <!-- JavaScript file for rendering editing functionality -->
     <script src="./editFileRenderer.js"></script>
 </body>
 </html>
