--- a/Client/shareManagementDialog/shareManagementDialog.html
+++ b/Client/shareManagementDialog/shareManagementDialog.html
@@ -9,15 +9,18 @@
 <body>
   <div class="form-container">
     <h2>Share Management Dialog</h2>
+    <!-- Share Management Form -->
     <form class="shares-form">
         <h4>The users that this file is shared with:</h4>        
         <div class="shares-container" id="sharesForm"></div>
       <div id="errorMessage" class="error-message"><em></em></div>
         <div class="buttons-group">
+        <!-- Close button to close the dialog -->
             <button class="action-btn" id="closeButton">Close</button>
         </div>
     </form>
   </div>
+  <!-- Include JavaScript file for rendering the share management dialog -->
   <script src="./shareManagementDialogRenderer.js"></script>
 </body>
 </html>
