--- a/Client/creationDialog/creationDialog.html
+++ b/Client/creationDialog/creationDialog.html
@@ -11,31 +11,38 @@
     <h2>Create File Dialog</h2>
     <form>
       <div class="input-group">
+        <!-- Input field for entering file name -->
         <label for="textInput">File Name:</label>
         <input type="text" id="textInput" name="textInput" required>
       </div>
 
       <div class="input-group">
+        <!-- Radio button for selecting `.h` file type -->
         <label><input type="radio" name="radioGroup" id="hFile"><span>`.h` file</span></label>
       </div>
 
       <div class="input-group">
+        <!-- Radio button for selecting `.c` file type -->
         <label><input type="radio" name="radioGroup" id="cFile"><span>`.c` file</span></label>
       </div>
 
       <div class="input-group">
+        <!-- Radio button for selecting folder -->
         <label>
           <input type="radio" name="radioGroup" id="folder"><span>folder</span>
         </label>
       </div>
 
       <div class="buttons-group">
+        <!-- Button to confirm file creation -->
         <button class="action-btn" id="okButton">OK</button>
+        <!-- Button to cancel file creation -->
         <button class="action-btn" id="cancelButton">Cancel</button>
       </div>
     </form>
   </div>
 
+  <!-- JavaScript file for rendering the creation dialog -->
   <script src="./creationDialogRenderer.js"></script>
 </body>
 </html>
