--- a/Client/sharingDialog/sharingDialog.html
+++ b/Client/sharingDialog/sharingDialog.html
@@ -7,29 +7,35 @@
   <title>Add Shared File Dialog</title>
 </head>
 <body>
+  <!-- Form container for adding shared files or folders -->
   <div class="form-container">
     <h2>Add Shared File Dialog</h2>
     <form>
+      <!-- Input field for object name -->
       <div class="input-group">
         <label for="textInput">Object Name:</label>
         <input type="text" id="objectInput" name="textInput" required>
       </div>
 
+      <!-- Input field for share code -->
       <div class="input-group">
         <label for="textInput">Share Code:</label>
         <input type="text" id="shareCodeInput" name="textInput" required>
       </div>
 
+      <!-- Radio button for selecting file type -->
       <div class="input-group">
         <label><input type="radio" name="radioGroup" id="hFile"><span>file</span></label>
       </div>
 
+      <!-- Radio button for selecting folder type -->
       <div class="input-group">
         <label>
           <input type="radio" name="radioGroup" id="folder"><span>folder</span>
         </label>
       </div>
 
+      <!-- Buttons for OK and Cancel actions -->
       <div class="buttons-group">
         <button class="action-btn" id="okButton">OK</button>
         <button class="action-btn" id="cancelButton">Cancel</button>
@@ -37,6 +43,7 @@
     </form>
   </div>
 
+  <!-- Script for handling interactions in the dialog -->
   <script src="./sharingDialogRenderer.js"></script>
 </body>
 </html>
